--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.19"
+    "mongoose": "^5.9.19",
+    "nodemon": "^2.0.4",
+    "shortid": "^2.2.15"
   }
 }
