--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apidoc": "^0.23.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.19",
     "nodemon": "^2.0.4",
     "shortid": "^2.2.15"
